# whisperlive

./: GUIDE_WINDOWS.md  README.md  compare_whisper_models.ipynb  compare_whisper_models_analyze.ipynb  pyproject.toml  requirements.txt  results.csv  results.joblib  results.json  results.pkl  results.txt  run.bat  setup.bat  test.ipynb  transcription_20250916_212931.txt  whisperlive.py
audio/: audio-normalization.py  audio_processing.ipynb
